--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.venv/
+__pycache__/
+data/
+*.pyc
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -205,3 +209,6 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+music/
+app/static/artwork/
