--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,10 @@
             "type": "debugpy",
             "request": "launch",
             "module": "flask",
+            "cwd": "${workspaceFolder}/app",
             "env": {
                 "FLASK_APP": "app\\app.py",
-                "FLASK_DEBUG": "1"
+                "FLASK_DEBUG": "1",
             },
             "args": [
                 "run",
@@ -22,10 +23,11 @@
             "autoStartBrowser": false,
             "pathMappings": [
                 {
-                    "localRoot": "${workspaceFolder}",
+                    "localRoot": "${workspaceFolder}/app",
                     "remoteRoot": "."
                 }
-            ]
+            ],
+            "justMyCode": false
         },
         {
             "name": "Python Debugger: Remote Attach",
@@ -41,6 +43,24 @@
                     "remoteRoot": "."
                 }
             ]
+        },
+        {
+            "name": "Python Debugger: Current File",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [ "download", "--asin", "B01234567", "--output-dir", "${workspaceFolder}" ]
+        },
+        {
+            "name": "Python Module",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "audible_cli",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [ "download", "--asin", "B00EAYDFGS", "--aaxc","--output-dir", "${workspaceFolder}" ]
         }
     ]
 }
